--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "pg": "^8.4.1",
     "sqlite3": "^5.0.0",
+    "swagger-jsdoc": "^4.3.0",
+    "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.28",
     "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "@types/swagger-jsdoc": "^3.0.2",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/yup": "^0.29.8",
     "ts-node-dev": "^1.0.0-pre.64",
     "typescript": "^4.0.3"
