--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,6 +1,10 @@
 {
-    "type": "sqlite",
-    "database": "./src/database/database.sqlite",
+    "type": "postgres",
+    "host": "192.168.99.100",
+    "port": "5432",
+    "username": "postgres",
+    "password": "docker",
+    "database": "vuttr_database",
     "migrations": [
         "./src/database/migrations/*.ts"
     ],
